--- a/ass2/Bikes.html
+++ b/ass2/Bikes.html
@@ -36,7 +36,7 @@
             </div>
         </nav>-->
         <nav class="navbar navbar-default" id="header-nav">
-            <a class="navbar-brand" href="Webpro_2.html"><h1>Favourite Bikes</h1></a>
+            <a class="navbar-brand" href="Bikes.html"><h1>Favourite Bikes</h1></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
               <span class="sr-only">=</span>
 </header>
